--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
+    style="@style/LinearLayoutBackground"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="56dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_name"
+            android:fontFamily="@font/ys_text_medium"
+            android:layout_gravity="start"
+            android:textSize="@dimen/title_size_22px"
+            android:paddingTop="14dp"
+            android:paddingStart="16dp"
+            android:paddingBottom="16dp"
+            android:textColor="@color/white">
+        </TextView>
+    </FrameLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="24dp"
+        android:paddingBottom="28dp"
+        android:paddingHorizontal="16dp">
+
+        <Button
+            android:id="@+id/search"
+            style="@style/ButtonStyle"
+            android:text="@string/search"
+            app:icon="@drawable/search" />
+
+        <Button
+            android:id="@+id/media"
+            style="@style/ButtonStyle"
+            android:text="@string/media"
+            app:icon="@drawable/media" />
+
+        <Button
+            android:id="@+id/settings"
+            style="@style/ButtonStyle"
+            android:text="@string/settings"
+            app:icon="@drawable/settings" />
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
+
