--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,10 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    android:orientation="vertical"
+    android:background="@color/backgroundSearch"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:gravity="center_vertical"
+        android:paddingTop="10dp"
+        android:focusable="true">
+
+        <ImageView
+            android:id="@+id/searchBackButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:clickable="true"
+            android:src="@drawable/right_arrow"
+            android:layout_marginEnd="24dp"
+            app:tint="@color/settingText">
+
+        </ImageView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Поиск"
+            android:textColor="@color/settingText"
+            android:fontFamily="@font/ys_text_medium"
+            android:textSize="22dp"
+            >
+        </TextView>
+    </LinearLayout>
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/background_search">
+
+        <EditText
+            android:id="@+id/searchId"
+            style="@style/SearchEditTextStyle"
+            />
+
+        <ImageView
+            android:id="@+id/clearButtonId"
+            style="@style/CloseButtonEditText"
+            android:clickable="true"
+            android:focusable="true"
+            android:visibility="gone"
+            />
+    </FrameLayout>
+
+
+
+
+
+
+
+
+
+</LinearLayout>
