--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -62,7 +62,12 @@
             />
     </FrameLayout>
 
-
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/trackList"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    style="@style/recyclerViewSearchStyle"
+    >
+</androidx.recyclerview.widget.RecyclerView>
 
 
 
