--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="text_grey">#AEAFB4</color>
     <color name="blue">#3772E7</color>
     <color name = "backgroundSearch">#FFFFFFFF</color>
-
+    <color name="group_time_viewcolor">#AEAFB4</color>
 </resources>
