--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,5 +7,6 @@
     <color name = "backgroundSearch">#1A1B22</color>
     <color name="rounded_background">#FFFFFF</color>
     <color name="group_time_viewcolor">#FFFFFF</color>
+    <color name="theme_color">#FFFFFF</color>
 
 </resources>
