--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -184,4 +184,41 @@
         <item name="backgroundTint">@color/white</item>
     </style>
 
+    <style name="SwitchStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">20dp</item>
+        <item name="android:fontFamily">@font/ys_text_regular</item>
+        <item name="android:textSize">@dimen/title_size_16px</item>
+    </style>
+
+
+    <style name="historySearchTextViewStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginTop">32dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontFamily">@font/ys_text_medium</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="historyRecyclerViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="clearHistoryButtonStyle">
+        <item name="android:layout_width">148dp</item>
+        <item name="android:layout_height">36dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:background">@drawable/clear_history_button</item>
+        <item name="android:fontFamily">@font/ys_text_medium</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
 </resources>
