--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue">#3772E7</color>
     <color name = "backgroundSearch">#FFFFFFFF</color>
     <color name="group_time_viewcolor">#AEAFB4</color>
+    <color name="theme_color">#1A1B22</color>
 </resources>
