Спринт 12. Попытка 2.Стал закрывать activity через finish(), добавил переключение темы в зависимости от ночного режима устройства. Изменил цвет свичера.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -39,8 +39,9 @@
 
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/themeSwitcher"
-        android:text="@string/black_theme"
-        style="@style/SwitchStyle" />
+        style="@style/SwitchStyle"
+
+        android:text="@string/black_theme" />
 
     <LinearLayout
         android:id="@+id/shareButton"
