--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -203,6 +203,7 @@
         app:layout_constraintStart_toEndOf="@id/barrier3Id"
         app:layout_constraintTop_toBottomOf="@id/barrier2Id"
         app:layout_constraintHorizontal_bias="1"
+        app:layout_constrainedWidth="true"
         android:textColor="@color/theme_color"
         android:fontFamily="@font/ys_text_regular"
         >
