--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/constraintBckgroundStyle"
@@ -48,9 +50,12 @@
         app:layout_constraintEnd_toStartOf="@+id/end"
         app:layout_constraintTop_toBottomOf="@id/posterId"
         app:layout_constraintHorizontal_bias="0"
-        style="@style/trackNameStyle">
+        style="@style/trackNameStyle"
+        app:layout_constrainedWidth="true"
+        >
     </TextView>
 
+    
     <TextView
         android:id="@+id/groupId"
         android:text="The Beatles"
@@ -100,7 +105,7 @@
 
     <TextView
         android:id="@+id/currentTrackTimeId"
-        android:text="0:30"
+        android:text="00:00"
         app:layout_constraintTop_toBottomOf="@id/playButtonId"
         app:layout_constraintStart_toEndOf="@id/start"
         app:layout_constraintEnd_toStartOf="@id/end"
