--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,14 +9,18 @@
     >
 
     <LinearLayout
+        android:id="@+id/poiskId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="true"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="16dp"
-        android:paddingTop="10dp">
-
+        android:paddingTop="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
         <ImageView
             android:id="@+id/searchBackButton"
             android:layout_width="wrap_content"
@@ -40,13 +44,16 @@
 
 
     <FrameLayout
+        android:id="@+id/editTextId"
         android:layout_width="match_parent"
         android:layout_height="36dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/background_search">
-
+        android:layout_marginHorizontal="16dp"
+        android:background="@drawable/background_search"
+        app:layout_constraintTop_toBottomOf="@id/poiskId"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
         <EditText
             android:id="@+id/searchId"
             style="@style/SearchEditTextStyle"
@@ -61,55 +68,151 @@
             android:visibility="gone" />
     </FrameLayout>
 
+    <TextView
+        android:id="@+id/tvSearchId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/historySearchTextViewStyle"
+        app:layout_constraintTop_toBottomOf="@id/editTextId"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/you_search"
+        android:visibility="gone"
+        >
+    </TextView>
+
+
+
+    <TextView
+        android:id="@+id/youSearhId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/editTextId"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/you_search"
+        android:layout_marginTop="42dp"
+        android:fontFamily="@font/ys_text_medium"
+        android:textSize="19sp"
+        android:textColor="@color/pause_color"
+        android:visibility="gone"
+        >
+    </TextView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/historyRecyclerViewId"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        style="@style/historyRecyclerViewStyle"
+        app:layout_constraintTop_toBottomOf="@id/youSearhId"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        android:layout_marginTop="20dp"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/clearHistoryButtonId"
+        android:text="@string/clear_history_button_text"
+        style="@style/clearHistoryButtonStyle"
+        app:layout_constraintTop_toBottomOf="@id/historyRecyclerViewId"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        >
+    </androidx.appcompat.widget.AppCompatButton>
+
+
+    <ProgressBar
+        android:id="@+id/progressBarId"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/blue"
+        android:visibility="gone"
+        android:layout_marginTop="140dp"
+        app:layout_constraintTop_toBottomOf="@id/editTextId"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+    </ProgressBar>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/trackList"
         android:visibility="gone"
         style="@style/recyclerViewSearchStyle"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextId"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
     </androidx.recyclerview.widget.RecyclerView>
 
-    <LinearLayout
-        android:id="@+id/linearLayoutHistoryId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/tvSearchId"
-            android:text="@string/you_search"
-            style="@style/historySearchTextViewStyle">
-        </TextView>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/historyRecyclerViewId"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            style="@style/historyRecyclerViewStyle">
-        </androidx.recyclerview.widget.RecyclerView>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/clearHistoryButtonId"
-            android:text="@string/clear_history_button_text"
-            style="@style/clearHistoryButtonStyle">
-        </androidx.appcompat.widget.AppCompatButton>
-    </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/notFoundId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/editTextId"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"
-        android:id="@+id/frameErrorId"
-        style="@style/frameLayoutErrorsStyle">
+        android:layout_marginHorizontal="24dp"
+        >
         <ImageView
-            android:id="@+id/errorImageId"
-            style="@style/errorTypeSearchImageStyle">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/music_no_found"
+            android:layout_marginTop="102dp"
+            >
         </ImageView>
         <TextView
-            android:id="@+id/errorTextMessageId"
-            style="@style/errorTypeSearchTextViewStyle">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/not_found"
+            android:layout_marginTop="238dp"
+            android:textSize="19sp"
+            android:textAlignment="center"
+            android:fontFamily="@font/ys_text_medium"
+            android:textColor="@color/pause_color"
+            >
+        </TextView>
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/errorInternetId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/editTextId"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        android:layout_marginHorizontal="24dp"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/internet_not_found"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="102dp"
+            >
+        </ImageView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/internet_problems"
+            android:layout_marginTop="238dp"
+            android:textSize="19sp"
+            android:textAlignment="center"
+            android:fontFamily="@font/ys_text_medium"
+            android:textColor="@color/pause_color"
+            >
         </TextView>
         <Button
             android:id="@+id/refreshButtonId"
-            android:visibility="gone"
             style="@style/refreshButtonStyle">
         </Button>
     </FrameLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
