--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="theme_color">#1A1B22</color>
     <color name ="switcher_color">#3772E7</color>
     <color name ="back_switcher_color">#9FBBF3</color>
+    <color name="pause_color">#1A1B22</color>
+
 
 </resources>
