--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -136,8 +136,8 @@
     </style>
 
     <style name="recyclerViewSearchStyle">
-        <item name = "android:layout_width">match_parent</item>
-        <item name = "android:layout_height">match_parent</item>
+        <item name = "android:layout_width">wrap_content</item>
+        <item name = "android:layout_height">wrap_content</item>
         <item name = "android:orientation">vertical</item>
         <item name = "android:layout_marginTop">16dp</item>
         <item name = "background">@color/backgroundSearch</item>
