--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.presentation.playlistmakermain.ui.MediaActivity">
+    tools:context="com.example.media.MediaActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
