--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -56,6 +56,7 @@
         >
         <EditText
             android:id="@+id/searchId"
+            android:saveEnabled="false"
             style="@style/SearchEditTextStyle"
             android:imeOptions="actionDone"
             android:singleLine="true" />
