--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -34,14 +34,14 @@
         style="@style/backButtonAudioStyle">
     </ImageButton>
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/posterId"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="@+id/start"
         app:layout_constraintEnd_toStartOf="@+id/end"
         app:layout_constraintTop_toBottomOf="@+id/backButtonMenu"
         style="@style/posterStyle">
-    </ImageView>
+    </com.google.android.material.imageview.ShapeableImageView>
 
     <TextView
         android:id="@+id/trackNameId"
@@ -77,7 +77,6 @@
 
     <ImageButton
         android:id="@+id/plusButtonId"
-        android:src="@drawable/plus"
         app:layout_constraintStart_toStartOf="@id/start"
         app:layout_constraintTop_toBottomOf="@id/barrierId"
         app:layout_constraintEnd_toStartOf="@id/playButtonId"
@@ -96,7 +95,6 @@
 
     <ImageButton
         android:id="@+id/likeButtonId"
-        android:src="@drawable/like"
         app:layout_constraintStart_toEndOf="@id/playButtonId"
         app:layout_constraintEnd_toStartOf="@id/end"
         app:layout_constraintTop_toBottomOf="@id/barrierId"
