--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,5 +9,8 @@
     <color name="group_time_viewcolor">#FFFFFF</color>
     <color name="theme_color">#FFFFFF</color>
     <color name="pause_color">#FFFFFF</color>
+    <color name = "search_color">#1A1B22</color>
+    <color name = "like_button">#1A1B22</color>
+
 
 </resources>
