--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -262,6 +262,7 @@
     </style>
 
     <style name="plusButtonStyle">
+        <item name="android:src">@drawable/add_track_button_night</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@null</item>
@@ -277,6 +278,7 @@
     </style>
 
     <style name="likeButtonStyle">
+        <item name="android:src">@drawable/like_track_button_night</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@null</item>
