--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name ="switcher_color">#3772E7</color>
     <color name ="back_switcher_color">#9FBBF3</color>
     <color name="pause_color">#1A1B22</color>
+    <color name = "search_color">#AEAFB4</color>
+    <color name = "like_button">#FFFFFF</color>
 
 
 </resources>
