--- a/app/src/main/res/values/dimension.xml
+++ b/app/src/main/res/values/dimension.xml
@@ -4,4 +4,6 @@
     <dimen name="title_size_16px">16dp</dimen>
     <dimen name="padding_name">21dp</dimen>
     <dimen name="text_padding">20dp</dimen>
+    <dimen name="album_corner_radius">8dp</dimen>
+    <dimen name="list_corner_radius">2dp</dimen>
 </resources>
