--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -296,4 +296,12 @@
         <item name="android:layout_height">match_parent</item>
         <item name = "background">@color/white</item>
     </style>
+
+
+    <style name="TabTextAppearance" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="fontFamily">@font/ys_text_medium</item>
+        <item name="android:textSize">14sp</item>
+        <item name="color">@color/theme_color</item>
+    </style>
+
 </resources>
