--- a/app/src/main/res/layout/fragment_media.xml
+++ b/app/src/main/res/layout/fragment_media.xml
@@ -9,17 +9,6 @@
     android:background="@color/backgroundSearch"
     >
 
-    <ImageView
-        android:id="@+id/mediaBckButtonId"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/arrow_to_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="@color/theme_color"
-        />
 
     <TextView
         android:id="@+id/mediaTitleId"
@@ -27,10 +16,10 @@
         android:layout_height="wrap_content"
         android:text="@string/media"
         android:textSize="22sp"
-        app:layout_constraintStart_toEndOf="@id/mediaBckButtonId"
-        app:layout_constraintTop_toTopOf="@id/mediaBckButtonId"
-        app:layout_constraintBottom_toBottomOf="@id/mediaBckButtonId"
-        android:layout_marginStart="28dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
         android:textColor="@color/theme_color"
         android:fontFamily="@font/ys_text_medium"
         />
@@ -39,7 +28,7 @@
         android:id="@+id/barrie1Id"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:constraint_referenced_ids="mediaBckButtonId,mediaTitleId"
+        app:constraint_referenced_ids="mediaTitleId"
         android:orientation="horizontal"
         app:barrierDirection="bottom"
         >
