--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -304,4 +304,9 @@
         <item name="color">@color/theme_color</item>
     </style>
 
+    <style name="bottom_nav_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
 </resources>
