--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -14,6 +14,8 @@
     <color name = "bottom_nav_color">#1A1B22</color>
     <color name = "text_and_icon_nav_color">#FFFFFF</color>
     <color name = "selected_color">#3772E7</color>
+    <color name = "bottom_line">#E6E8EB</color>
+
 
 
 
