--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,7 @@
     <color name = "bottom_nav_color">#FFFFFF</color>
     <color name = "text_and_icon_nav_color">#1A1B22</color>
     <color name = "selected_color">#3772E7</color>
+    <color name = "bottom_line">#E6E8EB</color>
+    <color name = "tumbler_back">#9FBBF3</color>
 
 </resources>
