--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -9,6 +9,7 @@
 
     <ImageView
         android:id="@+id/iconId"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/music_no_found"
@@ -19,6 +20,8 @@
     </ImageView>
 
     <TextView
+        android:id="@+id/mediaTextId"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/media_empty"
@@ -32,5 +35,19 @@
         android:layout_marginTop="16dp"
         >
     </TextView>
+
+    <androidx.recyclerview.widget.RecyclerView
+
+        android:id="@+id/favoriteRecyclerViewId"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="visible"
+        android:orientation="horizontal"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
