--- a/app/src/main/res/layout/fragment_media.xml
+++ b/app/src/main/res/layout/fragment_media.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.media.MediaFragment"
+    tools:context="com.example.media.ui.MediaFragment"
     android:background="@color/backgroundSearch"
     >
 
