--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,6 +15,8 @@
     <color name = "text_and_icon_nav_color">#FFFFFF</color>
     <color name = "selected_color">#3772E7</color>
     <color name = "bottom_line">#E6E8EB</color>
+    <color name = "fav_background">#FFFFFF</color>
+
 
 
 
