--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -16,6 +16,9 @@
     <color name = "selected_color">#3772E7</color>
     <color name = "bottom_line">#E6E8EB</color>
     <color name = "fav_background">#FFFFFF</color>
+    <color name="playlist_edit_text">#FFFFFF</color>
+    <color name="playlist_theme_color">#1A1B22</color>
+
 
 
 
