--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -305,5 +305,19 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="create_playlist_edit_text_styly">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginHorizontal">16dp</item>
+        <item name="android:background">@drawable/playlist_edittext</item>
+        <item name="android:paddingVertical">19dp</item>
+        <item name="android:paddingHorizontal">16dp</item>
+        <item name="android:fontFamily">@font/ys_text_regular</item>
+        <item name="android:layout_marginTop">32dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+    </style>
+
 
 </resources>
