состояние кнопки создать

--- a/app/src/main/res/layout/fragment_create_playlist.xml
+++ b/app/src/main/res/layout/fragment_create_playlist.xml
@@ -1,102 +1,111 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/playlist_theme_color"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.media.ui.CreatePlaylistFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/playlistBackButton"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/arrow_to_left"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="@color/theme_color"
-        />
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/playlist_theme_color"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context="com.example.media.ui.CreatePlaylistFragment">
 
-    <TextView
-        android:id="@+id/newPlaylistId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/new_playlist"
-        android:textSize="22sp"
-        app:layout_constraintStart_toEndOf="@id/playlistBackButton"
-        app:layout_constraintTop_toTopOf="@id/playlistBackButton"
-        app:layout_constraintBottom_toBottomOf="@id/playlistBackButton"
-        android:layout_marginStart="28dp"
-        android:textColor="@color/theme_color"
-        android:fontFamily="@font/ys_text_medium"
-        />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/playListImageContainerId"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="1:1"
-        android:background="@drawable/playlist_poster"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="42dp"
-        android:layout_marginHorizontal="24dp"
-        android:clickable="true"
-        app:layout_constraintTop_toBottomOf="@id/newPlaylistId"
-        >
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+        <ImageView
+            android:id="@+id/playlistBackButton"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/arrow_to_left"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:backgroundTint="@color/theme_color"
+            />
+
+        <TextView
+            android:id="@+id/newPlaylistId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/new_playlist"
+            android:textSize="22sp"
+            app:layout_constraintStart_toEndOf="@id/playlistBackButton"
+            app:layout_constraintTop_toTopOf="@id/playlistBackButton"
+            app:layout_constraintBottom_toBottomOf="@id/playlistBackButton"
+            android:layout_marginStart="28dp"
+            android:textColor="@color/theme_color"
+            android:fontFamily="@font/ys_text_medium"
+            />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/playListImageContainerId"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:1"
+            android:background="@drawable/playlist_poster"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="42dp"
+            android:layout_marginHorizontal="24dp"
             android:clickable="true"
-            android:layout_gravity="center"
-            android:src="@drawable/vector"
-            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintTop_toBottomOf="@id/newPlaylistId"
             >
-        </com.google.android.material.imageview.ShapeableImageView>
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:clickable="true"
+                android:layout_gravity="center"
+                android:src="@drawable/vector"
+                app:layout_constraintDimensionRatio="1:1"
+                >
+            </com.google.android.material.imageview.ShapeableImageView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/playListNameId"
+            android:hint="@string/playlist_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/playListImageContainerId"
+            style="@style/create_playlist_edit_text_styly">
+        </com.google.android.material.textfield.TextInputEditText>
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/descriptionId"
+            style="@style/create_playlist_edit_text_styly"
+            app:layout_constraintTop_toBottomOf="@id/playListNameId"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:hint="@string/description"
+            >
+        </com.google.android.material.textfield.TextInputEditText>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/createButtonId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/create"
+            android:fontFamily="@font/ys_text_medium"
+            android:textSize="16sp"
+            android:enabled="false"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@id/descriptionId"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="170dp"
+            android:background="@drawable/playlist_save_button_selector"
+            >
+        </androidx.appcompat.widget.AppCompatButton>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/playListNameId"
-        android:hint="@string/playlist_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playListImageContainerId"
-        style="@style/create_playlist_edit_text_styly">
-    </com.google.android.material.textfield.TextInputEditText>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/descriptionId"
-        style="@style/create_playlist_edit_text_styly"
-        app:layout_constraintTop_toBottomOf="@id/playListNameId"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:hint="@string/description"
-        >
-    </com.google.android.material.textfield.TextInputEditText>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/create"
-        android:fontFamily="@font/ys_text_medium"
-        android:textSize="16sp"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/descriptionId"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="170dp"
-        android:background="@drawable/playlist_create_button"
-        >
-    </androidx.appcompat.widget.AppCompatButton>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
