--- a/app/src/main/res/layout/fragment_create_playlist.xml
+++ b/app/src/main/res/layout/fragment_create_playlist.xml
@@ -52,16 +52,30 @@
             >
 
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/previewId"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:clickable="true"
                 android:layout_gravity="center"
                 android:src="@drawable/vector"
                 app:layout_constraintDimensionRatio="1:1"
+                android:visibility="visible"
+                >
+            </com.google.android.material.imageview.ShapeableImageView>
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imageId"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:scaleType="fitXY"
+                app:shapeAppearanceOverlay="@style/RoundedImageView"
                 >
             </com.google.android.material.imageview.ShapeableImageView>
 
